nginx-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-nginx
  namespace: nginx-namespace
  labels:
    app: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:1.14.2
        ports:
        - containerPort: 80 
        volumeMounts:
        - name: config
          mountPath: /etc/nginx/config.d/
      volumes:
      - name: config
        configMap:
          name: my-configmap
