nginx-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: my-nginx-svc
  namespace: nginx-namespace 
  labels:
    app: nginx
spec:
  type: LoadBalancer
  ports:
  - port: 80
  selector:
    app: nginx
